Quitar restricción a usuarios en el CRUD de miembros. Borrado de anotación repetida en funcion destroy. Agregado mensajes de error en busqueda para tener mejor feedback en caso de error. Correcciones menores.
